--- a/product/数据库/云存储Redis/操作指南/诊断优化/性能趋势.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/性能趋势.md
@@ -73,6 +73,19 @@
 <tr>
 <td>执行错误</td>
 <td>执行错误</td>   <td>cmd_err</td><td>次</td><td>命令执行错误的次数，例如命令不存在、参数错误等情况</td></tr>
+<tr>
+<td rowspan=6>时延</td>
+<td>平均执行时延</td><td>latency_avg</td><td>ms</td><td>Proxy 到 Redis Server 的执行时延平均值</td></tr>
+<tr>
+<td>最大执行时延</td><td>latency_max</td><td>ms</td><td>Proxy 到 Redis Server 的执行时延最大值</td></tr>
+<tr>
+<td>P99执行时延</td><td>latency_p99</td><td>ms</td><td>Proxy 到 Redis Server 99%的执行时延</td></tr>
+<tr>
+<td>读平均时延</td><td>latency_read</td><td>ms</td><td>Proxy 到 Redis Server 的读命令平均执行时延，读命令分类，请参见 <a href="https://cloud.tencent.com/document/product/239/48574#mlfl">命令分类</a></td></tr>
+<tr>
+<td>写平均时延</td><td>latency_write</td><td>ms</td><td>Proxy 到 Redis Server 的写命令平均执行时延，写命令分类，请参见 <a href="https://cloud.tencent.com/document/product/239/48574#mlfl">命令分类</a></td></tr>
+<tr>
+<td>其他命令平均时延</td><td>latency_other</td><td>ms</td><td>Proxy 到 Redis Server 的读写命令之外的命令平均执行时延</td></tr>
 </tbody></table>
 
 ### Redis 节点
@@ -124,7 +137,7 @@
 <td>读请求命中率</td><td>cmd_hits_ratio</td><td>%</td><td>Key 命中 / (Key命中 + KeyMiss)，该指标可以反应 Cache Miss 的情况</td></tr>
 </tbody></table>
 
-### Proxy节点
+### Proxy 节点
 
 <table>
 <thead><tr><th width="20%">指标类别</th><th width="30%">指标中文名</th><th width="20%">指标英文名</th><th width="5%">单位</th><th width="25%">指标含义</th></tr></thead>
@@ -176,9 +189,9 @@
 <tr>
 <td>P99执行时延</td><td>latency_p99</td><td>ms</td><td>Proxy 到 Redis Server 99%的执行时延</td></tr>
 <tr>
-<td>读平均时延</td><td>latency_read</td><td>ms</td><td>Proxy 到 Redis Server 的读命令平均执行时延，读命令分类，请参见 <a href="#mlfl">命令分类</a></td></tr>
+<td>读平均时延</td><td>latency_read</td><td>ms</td><td>Proxy 到 Redis Server 的读命令平均执行时延，读命令分类，请参见 <a href="https://cloud.tencent.com/document/product/239/48574#mlfl">命令分类</a></td></tr>
 <tr>
-<td>写平均时延</td><td>latency_write</td><td>ms</td><td>Proxy 到 Redis Server 的写命令平均执行时延，写命令分类，请参见 <a href="#mlfl">命令分类</a></td></tr>
+<td>写平均时延</td><td>latency_write</td><td>ms</td><td>Proxy 到 Redis Server 的写命令平均执行时延，写命令分类，请参见 <a href="https://cloud.tencent.com/document/product/239/48574#mlfl">命令分类</a></td></tr>
 <tr>
 <td>其他命令平均时延</td><td>latency_other</td><td>ms</td><td>Proxy 到 Redis Server 的读写命令之外的命令平均执行时延</td></tr>
 </tbody></table>
