--- a/product/数据库/云存储Redis/操作指南/诊断优化/性能趋势.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/性能趋势.md
@@ -31,7 +31,7 @@
 <tr>
 <td>key 过期数</td><td>expired</td><td>个</td><td>时间窗内被淘汰的 Key 个数，对应 info 命令输出的 expired_keys</td></tr>
 <tr> 
-<td>key驱逐数</td><td>evicted</td><td>个</td><td>时间窗内被驱逐的 Key 个数，对应 info 命令输出的 evicted_keys</td></tr>
+<td>key 驱逐数</td><td>evicted</td><td>个</td><td>时间窗内被驱逐的 Key 个数，对应 info 命令输出的 evicted_keys</td></tr>
 <tr>
 <td rowspan="3">网络使用量</td> 
 <td>连接数</td><td>connections</td><td>个</td><td>连接到实例的 TCP 连接数量</td></tr>    
@@ -121,9 +121,9 @@
 <td  rowspan=4>请求</td>
 <td>总请求</td><td>commands</td><td>次/秒</td><td>QPS，命令执行次数</td></tr>
 <tr>
-<td>读请求</td><td>cmd_read</td><td>次/秒</td><td>读命令执行次数，读命令分类，请参见 <a href="#mlfl">命令分类</a></td></tr>
+<td>读请求</td><td>cmd_read</td><td>次/秒</td><td>读命令执行次数，读命令分类，请参见 <a href="https://cloud.tencent.com/document/product/239/48574#mlfl">命令分类</a></td></tr>
 <tr>
-<td>写请求</td><td>cmd_write</td><td>次/秒</td><td>写命令执行次数，写命令分类，请参见 <a href="#mlfl">命令分类</a></td></tr>
+<td>写请求</td><td>cmd_write</td><td>次/秒</td><td>写命令执行次数，写命令分类，请参见 <a href="https://cloud.tencent.com/document/product/239/48574#mlfl">命令分类</a></td></tr>
 <tr>
 <td>其他请求</td><td>cmd_other</td><td>次/秒</td><td>读写命令之外的命令执行次数</td></tr>
 <tr>
