--- a/product/数据库/云存储Redis/操作指南/诊断优化/性能趋势.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/性能趋势.md
@@ -26,12 +26,12 @@
 <tr>    
 <td>节点最大内存使用率</td><td>mem_max_util</td><td>%</td><td>实例中节点（分片或者副本）最大内存使用率</td></tr>
 <tr>
-<td rowspan="3">Key信息</td>  
+<td rowspan="3">Key 信息</td>  
 <td>Key 总个数</td><td>keys</td><td>个</td><td>实例存储的总 Key 个数（一级 Key）</td></tr>
 <tr>
-<td>key 过期数</td><td>expired</td><td>个</td><td>时间窗内被淘汰的 Key 个数，对应 info 命令输出的 expired_keys</td></tr>
+<td>Key 过期数</td><td>expired</td><td>个</td><td>时间窗内被淘汰的 Key 个数，对应 info 命令输出的 expired_keys</td></tr>
 <tr> 
-<td>key 驱逐数</td><td>evicted</td><td>个</td><td>时间窗内被驱逐的 Key 个数，对应 info 命令输出的 evicted_keys</td></tr>
+<td>Key 驱逐数</td><td>evicted</td><td>个</td><td>时间窗内被驱逐的 Key 个数，对应 info 命令输出的 evicted_keys</td></tr>
 <tr>
 <td rowspan="3">网络使用量</td> 
 <td>连接数</td><td>connections</td><td>个</td><td>连接到实例的 TCP 连接数量</td></tr>    
@@ -112,9 +112,9 @@
 <td rowspan=3>Key 信息</td>
 <td>Key 总个数</td><td>keys</td><td>个</td><td>实例存储的总 Key 个数（一级 Key）</td></tr>
 <tr>
-<td>key 过期数</td><td>expired</td><td>个</td><td>时间窗内被淘汰的 Key 个数，对应 info 命令输出的 expired_keys</td></tr>
+<td>Key 过期数</td><td>expired</td><td>个</td><td>时间窗内被淘汰的 Key 个数，对应 info 命令输出的 expired_keys</td></tr>
 <tr>
-<td>key 驱逐数</td><td>evicted</td><td>个</td><td>时间窗内被驱逐的 Key 个数，对应 info 命令输出的 evicted_keys</td></tr>
+<td>Key 驱逐数</td><td>evicted</td><td>个</td><td>时间窗内被驱逐的 Key 个数，对应 info 命令输出的 evicted_keys</td></tr>
 <tr>
 <td>复制延迟</td><td>复制延迟</td><td>repl_delay</td><td>Byte</td><td>副本节点的相对主节点命令延迟长度</td></tr>
 <tr>
@@ -156,7 +156,7 @@
 <td>执行错误</td><td>cmd_err</td><td>次/秒</td><td>Proxy 命令执行错误的次数，例如，命令不存在、参数错误等情况</td></tr>
 <tr>
 <td>大 Value 请求</td><td>cmd_big_value</td><td>次/秒</td><td>请求命令大小超过32KB的执行次数</td></tr>
-  <tr>
+<tr>
 <td rowspan=2>流量</td>
 <td>入流量</td><td>in_flow</td><td>Mb/s</td><td>内网入流量</td></tr>
 <tr>
