--- a/product/移动与通信/云开发低代码平台/常见问题/流程和用户权限相关问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题/流程和用户权限相关问题.md
@@ -12,31 +12,31 @@
 
 [](id:que3)
 ### 流程发起审批之后，无法找到，在代办和已办里面都没有？
-请检查您操作审批的用户 和查询已办的用户是否为同一个用户。
+请检查您操作审批的用户和查询已办的用户是否为同一个用户。
 
 [](id:que4)
 ### 匿名用户（包括小程序、自定义应用登录的用户）是否支持数据触发流程？
-目前不支持数据触发方式 触发流程，可选择定时触发方式。
+目前不支持数据触发方式触发流程，可选择定时触发方式。
 
 [](id:que5)
 ### 内部用户触发流程后，无法审批原因是什么？
 内部用户触发流程时，需要具备该流程的访问权限。
 
 [](id:que6)
-### 流程发布与否跟环境有什么关系？
-企业工作台预览环境下触发流程，需要流程有【未发布】版本，【已发布】版本通过 编辑->保存  可生成【未发布】版本。
+### 流程发布和环境有什么关系？
+企业工作台预览环境下触发流程，需要流程有**未发布**版本，**已发布**版本通过**编辑** > **保存**可生成**未发布**版本。
 
 [](id:que7)
-### 企业工作台中数据源记录无法编辑、删除，原因是什么？
-说明该数据记录触发了一个或多个流程，需要流程审批结束才可以编辑、删除。
+### 企业工作台中数据源记录无法编辑或删除，原因是什么？
+说明该数据记录触发了一个或多个流程，需要流程审批结束才可以编辑或删除。
 
 
 [](id:que8)
-### 配置了消息模版，有些在选择时不显示，原因是什么？
-选择消息模板时，会过滤数据模型有关联关系的消息模版，以及未配置数据源的消息模版。
+### 配置了消息模板，有些在选择时不显示，原因是什么？
+选择消息模板时，会过滤数据模型有关联关系的消息模板，以及未配置数据源的消息模板。
 
 [](id:que9)
-### 如何成功配置/接收企业微信通知？
+### 如何成功配置或接收企业微信通知？
 接收企业微信通知，需要消息接收人为企微用户，如果接收人选择角色、数据模型相关，需要确认该角色、数据模型字段包含企微用户。
 
 
