--- a/product/视频服务/点播/产品介绍/产品功能/媒体存储管理.md
+++ b/product/视频服务/点播/产品介绍/产品功能/媒体存储管理.md
@@ -1,5 +1,5 @@
 ## 系统架构
-<img src="https://mc.qcloudimg.com/static/img/fbb9569e3b73af8f1c8ea97ffbb81afb/image.png" width="650">
+<img src="https://qcloudimg.tencent-cloud.cn/raw/d5551a59e5fcb8f0adeb09ffc184bb9a.png" width="650">
 
 ## 产品功能
 ### 媒体上传
