--- a/product/视频服务/点播/产品介绍/产品功能/媒体加工处理.md
+++ b/product/视频服务/点播/产品介绍/产品功能/媒体加工处理.md
@@ -1,5 +1,5 @@
 ## 系统架构
-<img src="https://mc.qcloudimg.com/static/img/962be55d993d07eee39c66d27fd778fe/image.png" width="650">
+<img src="https://qcloudimg.tencent-cloud.cn/raw/1841285ff0be195132e2b1e5e4b018a6.png" width="650">
 
 ## 产品功能
 ### 音视频转码
