--- a/product/视频服务/点播/产品介绍/产品功能/媒体加速播放.md
+++ b/product/视频服务/点播/产品介绍/产品功能/媒体加速播放.md
@@ -1,5 +1,5 @@
 ## 系统架构
-<img src="https://mc.qcloudimg.com/static/img/556de80b48183bb0b31ddbddfef18a40/image.png" width="650">
+<img src="https://qcloudimg.tencent-cloud.cn/raw/43bd80126b5cd25c7363a7a567c71d75.png" width="650">
 
 ## 产品功能
 ### 自定义域名
