--- a/product/视频服务/美视优享/常见问题/产品相关.md
+++ b/product/视频服务/美视优享/常见问题/产品相关.md
@@ -20,7 +20,7 @@
 
 ### 腾讯云视立方·腾讯特效 SDK 如何售卖？
 
-我们提供 2 个系列的套餐供客户选择，分别是基础系列和高级系列的套餐，一共细分为 10 个套餐，包含不同类别的功能项，可以基于自身需求，灵活选择合适的套餐。
+我们提供 2 个系列的套餐供客户选择，分别是基础系列和高级系列的套餐，一共细分为 11 个套餐，包含不同类别的功能项，可以基于自身需求，灵活选择合适的套餐。具体请参见 [价格总览](https://cloud.tencent.com/document/product/616/36807)。
 
 ### 美妆模块的优势有什么？
 
