--- a/product/视频服务/美视优享/常见问题/产品相关.md
+++ b/product/视频服务/美视优享/常见问题/产品相关.md
@@ -8,11 +8,11 @@
 
 ### 腾讯云视立方·腾讯特效 SDK 支持微信小程序吗？
 
-不支持。
+支持。
 
 ### 腾讯云视立方·腾讯特效 SDK 支持哪些端？
 
-支持移动端 iOS 和 Android。
+支持的开发端包括 iOS、Android、Web 和小程序。
 
 ### 腾讯云视立方·腾讯特效 SDK 的应用场景有哪些？
 
