--- a/product/企业应用/身份治理服务/产品简介/产品概述.md
+++ b/product/企业应用/身份治理服务/产品简介/产品概述.md
@@ -1,3 +1,4 @@
+## 什么是账号连接器
 账号连接器（TencentCloud IDaaS）致力于为企业提供身份认证和数据管理服务。作为新一代企业身份连接平台，可针对多身份源进行数据清洗和数据聚合，适配复杂多样的企业既有应用和认证系统，实现企业应用身份的打通和连接。
 
 ## 产品功能
