--- a/product/企业应用/身份治理服务/快速入门.md
+++ b/product/企业应用/身份治理服务/快速入门.md
@@ -6,7 +6,7 @@
 
 ### 步骤2：需求确认
 
-进入 [账号连接器产品介绍页面](https://cloud.tencent.com/product/tcid)，单击**立即购买**进入购买页，了解版本信息及计费项内容。单击 [联系我们](https://cloud.tencent.com/apply/p/0fy0f96uol9d) 留下您的联系方式，账号连接器工作人员将在半个工作日内与您取得联系，进行初步需求确认与商务洽谈。
+进入 [账号连接器产品介绍页面](https://cloud.tencent.com/product/tcid)，单击**立即选购**进入购买页，了解版本信息及计费项内容。单击 [联系我们](https://cloud.tencent.com/apply/p/0fy0f96uol9d) 留下您的联系方式，账号连接器工作人员将在半个工作日内与您取得联系，进行初步需求确认与商务洽谈。
 
 ### 步骤3：服务购买
 
