--- a/product/安全服务/云防火墙/操作指南/零信任防护/概述.md
+++ b/product/安全服务/云防火墙/操作指南/零信任防护/概述.md
@@ -1,5 +1,5 @@
 ## 功能背景
-当 ssh、rdp、内部 oa 系统以及数据库公网 IP 等资产直接暴露在互联网中，由此带来的攻击现象在重保期间尤其明显，因此云防火墙对上述四类服务提供了基于零信任的防护方案。
+当 SSH、RDP、内部 OA 系统以及数据库公网 IP 等资产直接暴露在互联网中，由此带来的攻击现象在重保期间尤其明显，因此云防火墙对上述四类服务提供了基于零信任的防护方案。
 
 ### 总体概览
 零信任接入方案分为了三个模块，分别是运维实例管理、Web 服务管理、数据库管理。其中运维实例管理和 Web 服务管理这两块实例支持微信扫码认证。
