--- a/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
+++ b/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
@@ -2,14 +2,14 @@
 数据库管理整合了您账户下所有的公网和内网数据库，利用云防火墙反代原理实现对这两种数据库的访问，同时在互联网边界可以封禁公网数据库的真实 IP 和端口，避免被黑客从互联网发起爆破和撞库等攻击。对于内网数据库也不用再配置端口映射等复杂的操作，直接通过接入域名即可实现访问，极大提高了数据库的安全性和运维的便利性。
 
 ## 功能特点 
-- 支持云上MySQL、MariaDB、Redis、CKafka、ElasticSearch 共五种数据库类型。
+- 支持云上 MySQL、MariaDB、Redis、CKafka、ElasticSearch 共五种数据库类型。
 - 提供统一的可自定义的公网域名接入。
 - 提供统一的白名单管控方式。
 - 支持资源分组等规则配置方法。
 - 支持全流程审计。
 
 ## 配置步骤
-本文介绍数据库接入防护的配置步骤，主要从数据库接入和白名单管控两个方面来做介绍。数据库接入接入大致分为以下几个步骤
+本文介绍数据库接入防护的配置步骤，主要从数据库接入和白名单管控两个方面来做介绍。数据库接入接入大致分为以下几个步骤：
 <dx-steps>
 - 创建 NAT 防火墙
 - 数据库同步
@@ -19,7 +19,7 @@
 </dx-steps>
 
 ## 创建 NAT 边界防火墙[](id:NAT)
-数据库接入云防火墙管控的载体是 NAT 边界防火墙，基于反代原理实现数据库的登录运维，因此首先需要把数据库所在 VPC 接入NAT边界防火墙，具体配置可参考 [NAT边界防火墙开关](https://cloud.tencent.com/document/product/1132/46929)。
+数据库接入云防火墙管控的载体是 NAT 边界防火墙，基于反代原理实现数据库的登录运维，因此首先需要把数据库所在 VPC 接入 NAT 边界防火墙，具体配置可参考 [NAT边界防火墙开关](https://cloud.tencent.com/document/product/1132/46929)。
 
 
 ## 数据库同步
@@ -39,7 +39,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/17003389a88a58fa776368c8b7139a65.png)
 
 #### 取消接入
-在 [数据库管理页面](https://console.cloud.tencent.com/cfw/identityauth/database)，已接入域名的数据库，单击**域名接入**，在弹窗中选择 **不使用云防火墙域**名，单击**确定**，即可完成配置。
+在 [数据库管理页面](https://console.cloud.tencent.com/cfw/identityauth/database)，已接入域名的数据库，单击**域名接入**，在弹窗中选择**不使用云防火墙域**名，单击**确定**，即可完成配置。
 ![](https://qcloudimg.tencent-cloud.cn/raw/ba32c9850d0f14334c062c4cf80ceae7.png)
 
 ## 白名单管控
