--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/集群资源配额调整说明.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/集群资源配额调整说明.md
@@ -5,13 +5,14 @@
 ```
 kubectl get resourcequota tke-default-quota -o yaml
 ```
-<b>备注:</b> 如需查看给定命名空间的 `tke-default-quota` 对象，请添加 `--namespace` 选项以指定命名空间。
+
+>! 如需查看给定命名空间的 `tke-default-quota` 对象，请添加 `--namespace` 选项以指定命名空间。
 
 具体的配额限制如下:
 | 集群规格 | Pod数量限制 | ConfigMap 数量限制| CRD限制|
 | ---------------- | ------------------- |------------------- |------------------- |
-| 0< nodeNum ≤ 5 | 1000 | 500| 500
-| 5 < nodeNum < 20 | 5000  |3000|1000
-| 20 ≤ nodeNum | 无限制 |无限制  |无限制
+| 0< nodeNum ≤ 5 | 1000 | 500| 500|
+| 5 < nodeNum < 20 | 5000  |3000|1000|
+| 20 ≤ nodeNum | 无限制 |无限制  |无限制|
 
-如有特殊场景需要调整配额，请[在线咨询](https://cloud.tencent.com/online-service?from=doc_457)提出配额申请。
+如有特殊场景需要调整配额，请通过 [在线咨询](https://cloud.tencent.com/online-service?from=doc_457) 提出配额申请。
