--- a/product/大数据与AI/数据编排平台/产品简介/应用场景.md
+++ b/product/大数据与AI/数据编排平台/产品简介/应用场景.md
@@ -1,5 +1,5 @@
 ### 统一存储服务
-DOP 可以将跨 DC、跨存储系统（HDFS、Ozone、COS、S3）的数据统一挂载到 CDO 中，然后对上层应用提供统一的聚合视图。
+DOP 可以将跨 DC、跨存储系统（HDFS、Ozone、COS、S3）的数据统一挂载到 DOP 中，然后对上层应用提供统一的聚合视图。
 
 ### 跨域、跨云数据访问提速和无感迁移
 DOP 可以帮助用户在腾讯云上实现跨域、跨云数据访问提速，也可以实现数据在迁移过程中无感访问。
