--- a/product/大数据与AI/数据编排平台/常见问题.md
+++ b/product/大数据与AI/数据编排平台/常见问题.md
@@ -2,7 +2,7 @@
 可以通过执行如下命令：`./bin/alluxio fsadmin report`，执行完成后，如果有正确的 worker 数量及容量信息，则表示 DOP 集群正常。
 
 ### 为什么会出现 java.lang.RuntimeException: java.lang.ClassNotFoundException: Class alluxio.hadoop.FileSystem not found？
-Spark，Hdfs 等是通过兼容 Hdfs 接口来访问 DOP 的，如果出现这个问题，请检查 Spark 或 Hdfs 环境是否正确引用了 DOP 的依赖包。
+Spark，Hdfs 等是通过兼容 HDFS 接口来访问 DOP 的，如果出现这个问题，请检查 Spark 或 HDFS 环境是否正确引用了 DOP 的依赖包。
 
 ### DOP 存在当前版本和历史版本，使用哪个？
 DOP 的最新功能都在 DOP 当前版本中，历史版本将不再新增特性。因此强烈建议您使用当前版本。
