--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/集群资源配额调整说明.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/集群资源配额调整说明.md
@@ -1,5 +1,5 @@
-### 配额调整说明
-&emsp;&emsp;腾讯云边缘容器EDGE会向节点数 (nodeNum）不超过5个 (0 < nodeNum ≤ 5) 、大于5个且小于20个 (5 < nodeNum < 20)的集群上的命名空间自动应用一组资源配额。您将无法移除这些配额，此资源配额将保护集群控制平面，避免因部署到集群的应用中存在潜在Bug而导致其不稳定。
+
+腾讯云边缘容器会向节点数 (nodeNum）不超过5个 (0 < nodeNum ≤ 5) 、大于5个且小于20个（5 < nodeNum < 20）的集群上的命名空间自动应用一组资源配额。您将无法移除这些配额，此资源配额将保护集群控制平面，避免因部署到集群的应用中存在潜在 Bug 而导致其不稳定。
 
 如需检查此配额，您可以执行以下命令：
 ```
