--- a/product/安全服务/边缘安全加速平台/操作指南/数据分析/流量分析.md
+++ b/product/安全服务/边缘安全加速平台/操作指南/数据分析/流量分析.md
@@ -9,9 +9,10 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/77e9cbf2db335dbcc6d2fc91630d3227.png)
 **参数说明：**
  - 站点：支持查看全部站点或单个站点的数据分析结果。
- - 统计指标：单击**总流量、总请求数**，可展示根据流量、请求数所统计的  Hosts、客户端 IP 地址、urls、Referes 等指标。
+ - 统计指标：单击*总流量、总请求数*，可展示根据流量、请求数所统计的 Hosts、客户端 IP 地址、urls、Referes 等指标。单击**带宽峰值**，可以查看带宽峰值展示的趋势曲线和国家/地区分布。
 >!
->- 调整时区会对整个「数据分析」功能生效。
+>- 带宽统计指标仅有 Host、国家/地区、HTTP 协议筛选指标。
+>- 调整时区会对整个**数据分析**功能生效。
 >- 单次查询起始时间与结束时间之间不能超过30天。
 >
  - 时间颗粒度：
@@ -27,6 +28,10 @@
     - 浏览器类型：用户访问使用的浏览器类型。
     - 操作系统类型：用户访问使用的操作系统类型。
     - 网络协议：用户访问时使用的网络协议，目前支持：http/2.0、http/1.1、https/2.0、https/1.1。
+    - TLS版本：TLS协议版本，目前支持：TLS1.0、TLS1.1、TLS1.2、TLS1.3。
+    - URL：访问URL，例如：/content。
+    - Referer：Referer 信息，例如：example.com。
+    - 资源类型：请求的资源类型，例如：png、json 等。
     
 ### 数据总览
 在总览模块中，可根据设置的筛选条件与数据统计指标，展示这一时间段的趋势曲线。
