--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -10,6 +10,26 @@
 </thead>
 <tbody>
 <tr>
+<td>DDoS 高防 IP（境外企业版）下架公告</td>
+<td>2022年5月23日将下线 DDoS 高防 IP（境外）企业版。</td>
+<td> 2022-05-11</td>
+<a href="https://cloud.tencent.com/document/product/1014/73661"> DDoS 高防 IP（境外企业版） 产品下架公告</a>
+</td>
+</tbody></table>
+
+
+## 2022-04
+<table>
+<thead>
+<tr>
+<th width="20%">动态名称</th>
+<th width="50%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="15%">相关文档</th>
+</tr>
+</thead>
+<tbody>
+<tr>
 <td>旧版资源一键升级</td>
 <td>旧版高防 IP、旧版高防 IP 专业版资源，可根据控制台升级引导，免费升级资源。</td>
 <td> 2022-04-27</td>
