--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -13,7 +13,7 @@
 <td>DDoS 高防 IP（境外企业版）下架公告</td>
 <td>2022年5月23日将下线 DDoS 高防 IP（境外）企业版。</td>
 <td> 2022-05-11</td>
-<a href="https://cloud.tencent.com/document/product/1014/73661"> DDoS 高防 IP（境外企业版） 产品下架公告</a>
+<td> <a href="https://cloud.tencent.com/document/product/1014/73661"> DDoS 高防 IP（境外企业版） 产品下架公告</a>
 </td>
 </tbody></table>
 
