--- a/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
+++ b/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
@@ -23,7 +23,7 @@
 
 
 ## 数据库同步
-1. 登录 [云防火墙控制台](https://console.cloud.tencent.com/cfw/identityauth)，在左侧导航栏中，选择**零信任接入** > **数据库管理**。
+1. 登录 [云防火墙控制台](https://console.cloud.tencent.com/cfw/identityauth)，在左侧导航栏中，选择**零信任防护** > **数据库管理**。
 2. 在数据库管理页面，单击**同步资产**，完成数据库的同步更新。
 ![](https://qcloudimg.tencent-cloud.cn/raw/859a1c5970eae60ed04c4ba88225f75c.png)
 
