--- a/product/教育/智聆口语评测/SDK 文档/小程序插件.md
+++ b/product/教育/智聆口语评测/SDK 文档/小程序插件.md
@@ -90,7 +90,7 @@ manager.start({
 //停止录音
 manager.stop()
 ```
-使用本地音频数据测评：
+使用本地音频数据测评（SDK 版本1.2.2及以上才支持）
 ```js
 /**  
 * 支持将音频数据作为参数进行测评，仅支持base64格式  
