--- a/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
+++ b/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
@@ -9,7 +9,7 @@
 - 支持全流程审计。
 
 ## 配置步骤
-本文介绍数据库接入防护的配置步骤，主要从数据库接入和白名单管控两个方面来做介绍。数据库接入接入大致分为以下几个步骤：
+本文介绍数据库接入防护的配置步骤，主要从数据库接入和白名单管控两个方面来做介绍。数据库接入大致分为以下几个步骤：
 <dx-steps>
 - 创建 NAT 防火墙
 - 数据库同步
