--- a/product/视频服务/点播/用户指南/图片处理设置/模板设置.md
+++ b/product/视频服务/点播/用户指南/图片处理设置/模板设置.md
@@ -6,8 +6,8 @@
 ## 图片即时处理模板
 
 您可根据业务需要创建新的图片即时处理模板，并进行自定义设置。选择**图片即时处理模板**，然后单击**创建图片即时处理模板**进入模板自定义设置。
-+ 模板名称：仅支持中文、英文、数字、空格、下划线(_)、短横线(-)和句点(.)七种格式，长度不能超过64个字符
-+ 处理方式：缩放、裁剪
++ 模板名称：仅支持中文、英文、数字、空格、下划线(_)、短横线(-)和句点(.)七种格式，长度不能超过64个字符。
++ 处理方式：缩放、裁剪。
 + 缩放：
 	+ 限宽：输出图片的宽度（像素），有效取值范围： 1~9999。若要指定宽度为等比缩放，则**取消钩选**此配置。
 	+ 限高：输出图片的高度（像素），有效取值范围 ：1~9999。若要指定高度为等比缩放，则**取消钩选**此配置。
@@ -18,4 +18,4 @@
 		+ 矩形尺寸：宽度（px）x高度（px），宽度、高度有效取值范围均为： 1~9999。
 
 #### 预置参数模板列表
-详细的参数请参见 [预置参数模板列表 - 预置图片即时处理模板](TODO 开发指南>图片处理>预置参数模板列表.md)。
+详细的参数请参见 [预置参数模板列表 - 预置图片即时处理模板](https://cloud.tencent.com/document/product/266/73662)。
