--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/跨地域服务互访.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/跨地域服务互访.md
@@ -89,57 +89,7 @@ spec:
   ...
 ```
 
-5. 远程登录南京边缘地域的 Pod 访问北京地域的服务。示例如下：
-```
-root@nginx-nj-******45b8-8sslj:/# curl http://nginx-bj.default:80
-<!DOCTYPE html>
-<html>
-<head>
-<title>Welcome to nginx!</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
-
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
-
-<p><em>Thank you for using nginx.</em></p>
-</body>
-</html>
-```
-6. 远程登录北京边缘地域的 Pod 访问南京地域的服务。示例如下：
-```
-root@nginx-bj-******8894-r7b5j:/# curl http://nginx-nj.default:80
-<!DOCTYPE html>
-<html>
-<head>
-<title>Welcome to nginx!</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
-
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
-
-<p><em>Thank you for using nginx.</em></p>
-</body>
-</html>
-```
+5. 远程登录南京边缘地域的 Pod 访问北京地域的服务。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/ef62b278e965a89f6cc224f1984dba55.png)
+6. 远程登录北京边缘地域的 Pod 访问南京地域的服务。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/94342988b00db94865de82f3ef29ea82.png)
