--- a/product/视频服务/点播/开发者指南/图片处理/图片即时处理.md
+++ b/product/视频服务/点播/开发者指南/图片处理/图片即时处理.md
@@ -1,6 +1,6 @@
-对图片修改尺寸、部分裁剪等编辑处理存在较多的应用场景，比如媒资控制台展示缩略图、对用户上传的图片按统一尺寸裁剪生成圆形/方形用户头像等等。在云端图片编辑场景下，传统图片编辑方式（如本地编辑软件、Web 在线编辑）并非最佳实践，实际使用中存在如下痛点：
+对图片修改尺寸、部分裁剪等编辑处理存在较多的应用场景，比如媒资控制台展示缩略图、对用户上传的图片按统一尺寸裁剪生成圆形/方形用户头像等等。在云端图片编辑场景下，传统图片编辑方式（如本地编辑软件、Web 在线编辑）并非最佳实践，实际使用中存在诸多痛点，例如：
 - 操作流程复杂（一般要经过下载、编辑、上传回云端等繁琐步骤）
-- 手工编辑效率低且易出错等。
+- 手工编辑效率低且易出错。
 
 使用云点播图片即时处理可一举解决上述全部痛点。
 
