--- a/product/视频服务/点播/开发者指南/图片处理/图片智能识别.md
+++ b/product/视频服务/点播/开发者指南/图片处理/图片智能识别.md
@@ -4,10 +4,10 @@
 
 <table>
     <tr>
-        <th style="width:20%">
+        <th style="width:30%">
             对象
         </th>
-        <th style="width:10%">
+        <th style="width:20%">
             操作
         </th>
         <th>
@@ -16,7 +16,7 @@
     </tr>
     <tr>
         <td rowspan=4>
-            图像画面（人、物体和场景）
+            图像画面
         </td>
     </tr>
     <tr>
@@ -58,7 +58,7 @@
     </tr>
     <tr>
         <td rowspan=3>
-            OCR 文字（画面中的文字）
+            OCR 文字
         </td>
         <td>
 			令人反感的信息
