--- a/product/安全服务/边缘安全加速平台/操作指南/日志分析/离线日志.md
+++ b/product/安全服务/边缘安全加速平台/操作指南/日志分析/离线日志.md
@@ -43,9 +43,9 @@
 | EdgeResponseBytes      | int      | 节点响应返回给客户端的大小                                 |
 
 ### 注意事项
-- 通过访问日志第五个字段中记录的字节数，统计计算而来的流量 / 带宽数据与 EdgeOne 计费流量 / 带宽数据可能不一致。原因如下：
+- 通过访问日志第五个字段中记录的字节数，统计计算而来的流量、带宽数据与 EdgeOne 计费流量或带宽数据可能不一致。原因如下：
    - 访问日志中仅可记录应用层数据，在实际网络传输中，产生的网络流量要比纯应用层流量多5% - 15%。由两部分组成：
-     - TCP/IP 包头消耗，基于 TCP/IP 协议的 HTTP 请求，每一个包的大小最大是1500个字节，包含了 TCP 和 IP 协议的40个字节的包头，包头部分会产生流量，但是无法被应用层统计到，这部分的开销大致为3%左右；
+     - TCP/IP 包头消耗，基于 TCP/IP 协议的 HTTP 请求，每一个包的大小最大是1500个字节，包含了 TCP 和 IP 协议的40个字节的包头，包头部分会产生流量，但是无法被应用层统计到，这部分的开销大致为3%左右。
      - TCP 重传，正常网络传输过程中，发送的网络包会有3% - 10%左右会被互联网丢掉，丢掉后服务器会对丢弃的部分进行重传，此部分流量应用层也无法统计，占比约为3% - 7%。
 - 部分数据包，由于 MacOS 系统的目录系统的缺陷，在MacOS 系统下双击解压会报错，如出现这种情况，您可以通过如下 Terminal 命令进行解压。
 ```
