--- a/product/监控与管理/访问控制/用户指南/角色管理/管理角色/创建角色.md
+++ b/product/监控与管理/访问控制/用户指南/角色管理/管理角色/创建角色.md
@@ -45,7 +45,7 @@
  - 选择身份提供商：选择本次为哪个身份提供商创建角色。
  - 控制台访问（可选）：管理是否允许角色登录腾讯云管理控制台，角色均默认可通过编程访问腾讯云。
  - 使用条件（可选）：管理身份提供商使用该角色的条件。具体可参考 [使用条件](#conditions)。
-4. 在策略列表内，勾选您想要给当前角色添加的策略，为角色完成权限配置。
+4. 在策略列表内，勾选您想要给当前角色添加的策略，为角色完成权限配置，单击**下一步**。
 5. 输入您自定义的角色名称，您可以在**备注**键入对此角色的备忘信息。
 6. 审阅您即将创建角色的相关信息无误后，单击**完成**，即完成自定义角色创建。
 
