--- a/product/移动与通信/短信/购买指南/价格说明.md
+++ b/product/移动与通信/短信/购买指南/价格说明.md
@@ -174,7 +174,7 @@
 
 ## 国际/港澳台短信价格详情
 ### 套餐包预付费[](id:pre-payment)
-国际/港澳台短信支持全球通用型和地区专享型套餐包。购买套餐包后产生的短信发送量，按照实际用量抵扣套餐包额度，优先抵扣对应地区专享型套餐包，超量部分采用 [日结后付费](#post-payment)。
+国际/港澳台短信支持地区专享型套餐包。购买套餐包后产生的短信发送量，按照实际用量抵扣套餐包额度，优先抵扣对应地区专享型套餐包，超量部分采用 [日结后付费](#post-payment)。
 国际/港澳台短信套餐包购买后5分钟生效，自购买日起12个月内有效，过期将销毁套餐包资源。
 >!
 >- 国际/港澳台短信套餐包仅可用于国际/港澳台短信，不可用于国内短信。
