--- a/product/安全服务/边缘安全加速平台/操作指南/日志分析/离线日志.md
+++ b/product/安全服务/边缘安全加速平台/操作指南/日志分析/离线日志.md
@@ -18,7 +18,7 @@
 ## 字段说明
 日志的默认按照 json 格式存储，具体的日志字段解释如下。
 当某字段无值时：
-- 字段的数据类型为 String 且字段没有数据，字段取值为："-"。
+- 字段的数据类型为 String 且字段没有数据，字段取值为：“-”。
 - 字段的数据类型为 Int 且字段没有数据，字段取值为：-1。
 
 ### 站点加速日志
