--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/概述.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/概述.md
@@ -1,10 +1,10 @@
-## 简介
+
 云硬盘数据备份点是腾讯云提供的一种自动化数据备份方式。数据备份点是云硬盘在备份时间的完全数据拷贝，可以用来恢复历史版本的数据。
-但不同于 [快照](https://cloud.tencent.com/document/product/362/5754)，数据备份点跟随云硬盘的生命周期，不可独立存在。即当云硬盘删除后，数据备份点也会自动随之删除，不可以继续使用该备份点来恢复数据。
+不同于 [快照](https://cloud.tencent.com/document/product/362/5754)，数据备份点完全跟随云硬盘的生命周期，不可独立存在。即当云硬盘删除后，数据备份点也会自动随之删除，不可以继续使用该备份点来恢复数据。
 
 ## 数据备份点功能
 - **历史数据备份**
-配置数据备份点配额后，腾讯云会自动为该云硬盘保留一个上一个自然日任意时刻的历史数据备份，若当下时刻发生了由病毒、入侵、误操作等带来的数据异常，则可以使用自动创建的历史数据备份点来恢复到未出问题前的状态。
+当配置数据备份点配额后，腾讯云会自动为该云硬盘保留一个上一个自然日任意时刻的历史数据备份，若发生了由病毒、入侵、误操作等带来的数据异常，则可以使用自动创建的历史数据备份点来恢复到未出问题前的状态。
 - **转为长期持久备份**
 重要时间点的数据备份点可以转换为快照，实现更长时间的、独立于云硬盘生命周期的长期备份。
 
@@ -17,15 +17,18 @@
 |数据备份点配额| 指一块云硬盘能够保留的数据备份点个数，作为计费单位。支持调整和退还操作。|
 
 
-- 您可在新购云硬盘时，或对已有但未创建数据备份点配的云硬盘，设置数据备份点配额。
-- 目前数据备份点配额最大支持**1个**，即最多支持保留云硬盘的一个历史数据。为云硬盘配置了数据备份点配额后，腾讯云将**自动**为该云硬盘保留**上一个自然日**中任意时刻的一个历史数据备份。例如：
-若您在05月02日新购了一块云硬盘并设置了数据备份点配额为1，则在05月03日当天该云硬盘会保留一个05月02日任意时间点的历史数据，在05月04日当天该云硬盘会保留一个05月03日任意时间点的历史数据（05月02日的历史数据备份会被自动删除），以此类推，直至该云硬盘生命周期结束。
+- 您可在新购云硬盘时，或对已有但未创建数据备份点配的云硬盘，设置其数据备份点配额。
+- 目前数据备份点配额最大支持**1个**，即最多支持保留1份云硬盘的历史数据。为云硬盘配置了数据备份点配额后，腾讯云将**自动**为该云硬盘保留**上一个自然日**中任意时刻的一个历史数据备份。
+例如，若您在05月02日新购了一块云硬盘并设置了数据备份点配额为1，则：
+ - 在05月03日当天，该云硬盘会保留一个05月02日任意时间点的历史数据。
+ - 在05月04日当天，该云硬盘会保留一个05月03日任意时间点的历史数据，且05月02日的历史数据备份会被自动删除。
+ 该过程将以此类推，直至该云硬盘生命周期结束。
 
 
 ## 计费方式
 数据备份点配额的计费方式仅与云硬盘大小有关，与其他因素均无关系。数据备份点配额的计费模式跟随云硬盘计费模式，具体价格可参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
 
-当您提升或降低数据备份点时，请了解以下费用规则及示例：
+当您提升或降低数据备份点配额时，请查阅以下费用规则及示例：
 
 <dx-tabs>
 ::: 提升数据备份点配额费用说明
@@ -37,7 +40,7 @@
 - 按月升配差价：新老配置原价按月的单价。
 - 升配月数：升配的费用按天折算到月
  - 升配天数 = 资源到期时间 - 当前时间
- - 升配月数 = 升配天数 / (365/12)
+ - 升配月数 = 升配天数 /（365/12）
 - 适用折扣：根据升配月数匹配官网适用折扣，其中折扣为官网生效的折扣。
 
 <dx-alert infotype="explain" title="">
@@ -61,7 +64,7 @@
 
 
 
-最终总升配费用 = 20 × (27 / (365/12)) × 1 = 17.75元
+最终总升配费用 = 20 ×（27 /（365/12））× 1 = 17.75元
 
 
 :::
@@ -73,6 +76,8 @@
 - 若退款金额 ≤ 0，数据备份点配额降低但不退费。
 - 若购买时使用折扣或代金券，折扣和代金券不予退还。
 
+
+
 #### 计费示例
 
 <dx-alert infotype="explain" title="">
@@ -81,14 +86,14 @@
 
 
 某用户于2022年05月01日新购一块时长为1个月，且带有1个数据备份点的200GB SSD 云硬盘（包年包月价格220元/月，按量计费价格0.528元/小时）。在2022年05月05日调整数据备份点配额至0。降配费用计算如下：
-- 原规格已经使用4天，退费费用 = 220 - (4 × 24 × 0.528) = 169.31 元
-- 新规格月单价为200元/月，此时距离到期日还有27天，此时新规格新购费用为：200 × (27/30) = 180 元
+- 原规格已经使用4天，退费费用 = 220 -（4 × 24 × 0.528）= 169.31 元
+- 新规格月单价为200元/月，此时距离到期日还有27天，此时新规格新购费用为：200 ×（27/30）= 180 元
 - 降配退款金额 = 169.31 - 180 < 0
 
 
 
 
-此时调整数据备份点配额，但退费金额为 0。
+此时调整数据备份点配额，但退费金额为0。
 
 
 :::
