--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/概述.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/概述.md
@@ -25,83 +25,16 @@
  该过程将以此类推，直至该云硬盘生命周期结束。
 
 
-## 计费方式
+## 计费说明
+#### 定价信息
 数据备份点配额的计费方式仅与云硬盘大小有关，与其他因素均无关系。数据备份点配额的计费模式跟随云硬盘计费模式，具体价格可参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
 
-当您提升或降低数据备份点配额时，请查阅以下费用规则及示例：
-
-<dx-tabs>
-::: 提升数据备份点配额费用说明
-
-
-#### 费用规则
-
-遵循按天补差价，升配费用 = 按月升配差价 × 升配月数 × 适用折扣。
-- 按月升配差价：新老配置原价按月的单价。
-- 升配月数：升配的费用按天折算到月
- - 升配天数 = 资源到期时间 - 当前时间
- - 升配月数 = 升配天数 /（365/12）
-- 适用折扣：根据升配月数匹配官网适用折扣，其中折扣为官网生效的折扣。
-
-<dx-alert infotype="explain" title="">
-- 本操作不影响资源到期时间。
-- 本操作可以使用代金券和平台赠送余额（赠送金）抵扣费用。
-</dx-alert>
+#### 调整费用说明
+当您提升或降低数据备份点配额时，请参见 [调整数据备份点配额费用说明]() 了解具体费用规则及计费示例。
 
 
 
-#### 计费示例
-
-<dx-alert infotype="explain" title="">
-以下价格仅作示例用，非官网实际价格，数据备份点价格请参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
-</dx-alert>
-
-
-某用户于2022年05月01日购买了一块时长为1个月的200GB 包年包月 SSD 云硬盘，在2022年05月05日调整数据备份点配额至1。则升配费用计算如下：
-- 按月升配差价 = 220 - 200 = 20元/月
-- 升配天数 = 27天
-- 适用折扣 = 不享受任何折扣
-
-
-
-最终总升配费用 = 20 ×（27 /（365/12））× 1 = 17.75元
-
-
-:::
-::: 降低数据备份点配额费用说明
-
-#### 费用规则
-降配退款金额 = 原规格退费费用 - 新规格新购费用，其中退费费用可参考 [退费说明](https://cloud.tencent.com/document/product/362/18072)。
-- 若退费金额 > 0，数据备份点配额降低，退还费用将以原路退还的方式退还到您的腾讯云账户。
-- 若退款金额 ≤ 0，数据备份点配额降低但不退费。
-- 若购买时使用折扣或代金券，折扣和代金券不予退还。
-
-
-
-#### 计费示例
-
-<dx-alert infotype="explain" title="">
-以下价格仅作示例用，非官网实际价格，数据备份点价格请参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
-</dx-alert>
-
-
-某用户于2022年05月01日新购一块时长为1个月，且带有1个数据备份点的200GB SSD 云硬盘（包年包月价格220元/月，按量计费价格0.528元/小时）。在2022年05月05日调整数据备份点配额至0。降配费用计算如下：
-- 原规格已经使用4天，退费费用 = 220 -（4 × 24 × 0.528）= 169.31 元
-- 新规格月单价为200元/月，此时距离到期日还有27天，此时新规格新购费用为：200 ×（27/30）= 180 元
-- 降配退款金额 = 169.31 - 180 < 0
-
-
-
-
-此时调整数据备份点配额，但退费金额为0。
-
-
-:::
-</dx-tabs>
-
-
-
-## 使用限制
+## 使用限制[](id:restrictions)
 - 当前每块云硬盘最大仅支持**1个**数据备份点配额，即每块云硬盘最多可保留1个数据备份点。
 - 数据备份点不同于快照，不会额外按照快照计费方式进行计费。
 - 数据备份点当前仅支持由腾讯云自动为云硬盘创建，不支持用户手动创建。
