--- a/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
+++ b/product/安全服务/云防火墙/操作指南/零信任防护/数据库管理.md
@@ -74,7 +74,7 @@
 
 ## 查看访问日志
 访问日志记录了 数据库访问的运维记录，便于后续审计，也提高了数据库访问的安全性。
-1. 在 [数据库管理页面](https://console.cloud.tencent.com/cfw/identityauth/database)，选择已接入的的数据库资产，单击操作列的**访问日志**，跳转至零信任防护日志 > 数据库访问。
+1. 在 [数据库管理页面](https://console.cloud.tencent.com/cfw/identityauth/database)，选择已接入的数据库资产，单击操作列的**访问日志**，跳转至零信任防护日志 > 数据库访问。
 ![](https://qcloudimg.tencent-cloud.cn/raw/5ff60195fa5b7d8bbbe591f0f161c77e.png)
 2. 在数据库访问页面，根据日志信息可以知道访问时间、访问用户、访问者 IP 和归属地等信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/db7d7ab5093ed53fdff6780da0390aa9.png)
