--- a/product/移动与通信/应用服务平台/开发指南/安全规则/系统函数.md
+++ b/product/移动与通信/应用服务平台/开发指南/安全规则/系统函数.md
@@ -13,7 +13,7 @@ get(path) returns document 对象
 
 |参数|	类型|	说明|
 |------|-------|-------|
-|path	|string	|非空，格式为 `database.集合名称.文档id` 的字符串，值可以通过多种计算方式得到，例如使用字符串模版进行拼接（\`database.${doc.collction}.${doc.\_id}\`）|
+|path	|string	|非空，格式为 `database.集合名称.文档id` 的字符串，值可以通过多种计算方式得到，例如使用字符串模板进行拼接（\`database.${doc.collction}.${doc.\_id}\`）|
 
 
 ### 返回值
