--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/使用数据备份点恢复云硬盘数据.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/使用数据备份点恢复云硬盘数据.md
@@ -12,5 +12,6 @@
 1. 登录 [云硬盘控制台](https://console.cloud.tencent.com/cvm/cbs/index)，并在页面上方选择其所在地域。
 2. 在列表中找到需恢复数据的云硬盘，单击 ID/名称，进入云硬盘详情页面。
 3. 在详情页中选择**历史数据备份点**页签，找到需使用的数据备份点，单击其所在行右侧的**恢复至该历史版本**。
-4. 在弹出的“恢复备份点数据”弹窗中确认信息，若当前云硬盘挂载的云服务器处于运行状态则还需勾选关机提示。5. 确认后，单击**确定**即可开始恢复。
+4. 在弹出的“恢复备份点数据”弹窗中确认信息，若当前云硬盘挂载的云服务器处于运行状态则还需勾选关机提示。
+5. 确认后，单击**确定**即可开始恢复。
 
