--- a/product/监控与管理/访问控制/最佳实践/按岗位职责管理员工访问权限.md
+++ b/product/监控与管理/访问控制/最佳实践/按岗位职责管理员工访问权限.md
@@ -1,8 +1,6 @@
-
+## 操作场景
 在企业上云的实际应用场景中，会存在不同岗位（如财务、运维、开发等）的员工需要登录访问腾讯云的场景，由于不同岗位的员工关注的内容不同，我们需要按照岗位职责为员工分配权限，保障权限的分配合理和安全。
 
-##  场景1：通过用户组授权
-#### 场景描述
 按照岗位创建用户组，通过用户组为相同岗位的员工授权。
 
 - 当一个岗位有多个员工时，只需要管理用户组的权限，不需要按照用户逐个进行授权，让管理更便捷。相关操作请参考：[新建用户组](https://cloud.tencent.com/document/product/598/14985)、[为用户组绑定策略](https://cloud.tencent.com/document/product/598/37299)。
@@ -10,13 +8,15 @@
 -  当有员工离职或岗位变更时，只需将员工移出对应岗位的用户组，即可回收相应权限。相关操作请参考：[为用户组添加/移除用户](https://cloud.tencent.com/document/product/598/10599)。
 
 
+##  通过用户组为运维员工授权
+#### 场景描述
+以运维员工为例，不同运维岗位关注的功能不同，可以为运维组授予相应的权限。
+
 #### 操作步骤
-以运维员工为例，不同运维岗位关注的功能不同，可以为运维组授予相应的权限。步骤如下：
 1. 创建运维组，并为运维组授权。
 2. 创建 CAM 子账号， 并将 CAM 子账号加入指定运维组。
 
 #### 常见运维组及授权策略参考示例
-
 
 <table>
 <thead>
@@ -180,7 +180,7 @@
 
 
 
-## 场景2：通过标签和用户组授权
+## 通过标签和用户组为开发员工授权
 #### 场景描述
 假设有 A、B 两个项目团队，两个项目使用的资源（如云服务器）不同，每个团队中有若干开发人员。
 
