--- a/product/计算与网络/云硬盘/操作指南/创建云硬盘.md
+++ b/product/计算与网络/云硬盘/操作指南/创建云硬盘.md
@@ -48,7 +48,7 @@
      </tr>
 		 <tr>
          <td>设置备份点</td>
-         <td>可选参数。</br>可以调整云硬盘数据备份点配额，设置后腾讯云将自动为您创建及管理云硬盘数据备份点。更多关于数据备份点介绍，请参见  <a href="https://cloud.tencent.com/document/product/362/73592">云硬盘数据备份点</a>。
+         <td>可选参数。</br>可在创建云硬盘时设置其数据备份点配额，设置后腾讯云将自动为您创建及管理云硬盘数据备份点。更多关于数据备份点介绍，请参见  <a href="https://cloud.tencent.com/document/product/362/73592">云硬盘数据备份点</a>。
 				</td>
      </tr>
 	 <tr>
