--- a/product/移动与通信/云开发低代码平台/产品动态.md
+++ b/product/移动与通信/云开发低代码平台/产品动态.md
@@ -49,7 +49,7 @@
 </tr>
 <tr>
 <td>计费优化</td>
-<td>微搭面向所有用户提供团队版、企业版、旗舰版三个版本套餐，各套餐的功能说明请参见 套餐详情定价</td>
+<td>微搭面向所有用户提供团队版、企业版、旗舰版三个版本套餐</td>
 <td>2022-04 </td>
 <td><a href="https://cloud.tencent.com/document/product/1301/48867">套餐详情</a></td>
 </tr>
