--- a/product/存储与CDN/智能媒资托管/CoFile 企业云盘/产品简介/功能概览.md
+++ b/product/存储与CDN/智能媒资托管/CoFile 企业云盘/产品简介/功能概览.md
@@ -52,7 +52,7 @@ CoFile 企业云盘提供以下功能：
   </tr>
   <tr>
     <td>文件回收站</td>
-    <td>支持文件删除到回收站，所有者/管理员可在回收站彻底删除或者恢复已删除的文件到原位置；回收站文件占用存储空间，文件默认保存90天。</td>
+    <td>支持文件删除到回收站，所有者/管理员可在回收站彻底删除或者恢复已删除的文件到原位置；回收站文件占用存储空间，文件默认保存90天</td>
   </tr>
   <tr>
     <td>文件自动备份</td>
