--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/调整数据备份点配额.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/调整数据备份点配额.md
@@ -16,7 +16,7 @@
 ::: 提升数据备份点配额
 #### 费用规则
 - 针对不同计费方式的云硬盘：
- - **包年包月云硬盘**：提升数据备份点配额按照生命周期的剩余时间补齐新配置与旧配置的差价。具体情形按照实际情况计算，您可以在付款页面查看。
+ - **包年包月云硬盘**：提升数据备份点配额按照生命周期的剩余时间补齐新配置与旧配置的差价。具体情况以实际情况为准，您可以在付款页面查看。
  - **按量计费云硬盘**：立即生效，并开始按新配置的价格进行计费。
 - 包年包月云硬盘具体费用规则：
 遵循按天补差价，升配费用 = 按月升配差价 × 升配月数 × 适用折扣。
@@ -24,7 +24,7 @@
  - 升配月数：升配的费用按天折算到月
  - 升配天数 = 资源到期时间 - 当前时间
  - 升配月数 = 升配天数 /（365/12）
-- 适用折扣：根据升配月数匹配官网适用折扣，其中折扣为官网生效的折扣。
+ - 适用折扣：根据升配月数匹配官网适用折扣，其中折扣为官网生效的折扣。
 
 <dx-alert infotype="explain" title="">
 - 本操作不影响资源到期时间。
@@ -36,11 +36,11 @@
 #### 计费示例
 
 <dx-alert infotype="explain" title="">
-以下价格仅作示例用，非官网实际价格，数据备份点价格请参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
+以下价格仅作示例用，非官网实际价格，数据备份点价格请参考 [云硬盘数据备份点配额价格总览](https://cloud.tencent.com/document/product/362/2413#backupquota)。
 </dx-alert>
 
 
-某用户于2022年05月01日购买了一块时长为1个月的200GB 包年包月 SSD 云硬盘，在2022年05月05日调整数据备份点配额至1。则升配费用计算如下：
+某用户于2022年05月01日购买了一块时长为1个月的200GB 包年包月 SSD 云硬盘，且未设置数据备份点配额额。在2022年05月05日调整数据备份点配额至1。则升配费用计算如下：
 - 按月升配差价 = 220 - 200 = 20元/月
 - 升配天数 = 27天
 - 适用折扣 = 不享受任何折扣
@@ -53,23 +53,23 @@
 
 #### 费用规则
 - 针对不同计费方式的云硬盘：
-  - **包年包月云硬盘**：降低数据备份点配额将通过计算生命周期内剩余时间的价值与新购新配置价值的差价进行退费。具体情形按照实际情况计算，您可以在付款页面查看。
+  - **包年包月云硬盘**：降低数据备份点配额将通过计算生命周期内剩余时间的价值与新购新配置价值的差价进行退费。具体情况以实际情况为准，您可以在付款页面查看。
   - **按量计费云硬盘**：立即生效，并开始按新配置的价格进行计费。
 - 包年包月云硬盘具体费用规则：
   降配退款金额 = 原规格退费费用 - 新规格新购费用，其中退费费用可参考 [退费说明](https://cloud.tencent.com/document/product/362/18072)。
   - 若退费金额 > 0，数据备份点配额降低，退还费用将以原路退还的方式退还到您的腾讯云账户。
   - 若退款金额 ≤ 0，数据备份点配额降低但不退费。
-  - 若购买时使用折扣或代金券，折扣和代金券不予退还。
+ - 若购买时使用折扣或代金券，折扣和代金券不予退还。
 
 
 #### 计费示例
 
 <dx-alert infotype="explain" title="">
-以下价格仅作示例用，非官网实际价格，数据备份点价格请参考 [云硬盘价格总览](https://cloud.tencent.com/document/product/362/2413)。
+以下价格仅作示例用，非官网实际价格，数据备份点价格请参考 [云硬盘数据备份点配额价格总览](https://cloud.tencent.com/document/product/362/2413#backupquota)。
 </dx-alert>
 
 
-某用户于2022年05月01日新购一块时长为1个月，且带有1个数据备份点的200GB SSD 云硬盘（包年包月价格220元/月，按量计费价格0.528元/小时）。在2022年05月05日调整数据备份点配额至0。降配费用计算如下：
+某用户于2022年05月01日新购一块时长为1个月，且带有1个数据备份点的200GB 包年包月 SSD 云硬盘（包年包月价格220元/月，按量计费价格0.528元/小时）。在2022年05月05日调整数据备份点配额至0。降配费用计算如下：
 - 原规格已经使用4天，退费费用 = 220 -（4 × 24 × 0.528）= 169.31 元
 - 新规格月单价为200元/月，此时距离到期日还有27天，此时新规格新购费用为：200 ×（27/30）= 180 元
 - 降配退款金额 = 169.31 - 180 < 0
