--- a/product/监控与管理/访问控制/最佳实践/按岗位职责管理员工访问权限.md
+++ b/product/监控与管理/访问控制/最佳实践/按岗位职责管理员工访问权限.md
@@ -184,7 +184,7 @@
 #### 场景描述
 假设有 A、B 两个项目团队，两个项目使用的资源（如云服务器）不同，每个团队中有若干开发人员。
 
-每个项目使用的云服务器会动态增加或减少，可以使用标签来动态授权管理。使用**资源&GoupA**标记项目 A 使用的云服务器，**资源&GoupB**标记项目 B 使用的云服务器。[查看支持标签的产品 >>](https://cloud.tencent.com/document/product/651/30727)
+每个项目使用的云服务器会动态增加或减少，可以使用标签来动态授权管理。使用 **Application&GoupA** 标记项目 A 使用的云服务器，**Application&GoupB** 标记项目 B 使用的云服务器。[查看支持标签的产品 >>](https://cloud.tencent.com/document/product/651/30727)
 
 #### 操作步骤
 1. 为项目 A 和项目 B 的开发团队分别创建两个用户组：GroupA 和 GroupB。
@@ -207,7 +207,7 @@
             "condition": {
                 "for_any_value:string_equal": {
                     "qcs:resource_tag": [
-                        "资源&GroupA"
+                        "Application&GroupA"
                     ]
                 }
             }
