--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/调整数据备份点配额.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/调整数据备份点配额.md
@@ -92,7 +92,7 @@
 <dx-tabs>
 ::: 通过控制台提升数据备份点配额
 
-在满足使用限制时，您可通过以下方式提升数据备份点配额：
+在满足 [使用限制](https://cloud.tencent.com/document/product/362/73592#restrictions) 时，您可通过以下方式提升数据备份点配额：
 
 1. 登录 [云硬盘控制台](https://console.cloud.tencent.com/cvm/cbs)，并在页面上方选择云硬盘所在地域。
 2. 在列表中找到需要调整数据备份点配额的云硬盘，选择其所在行右侧的**更多** > **调整数据备份点配额**。如下图所示：
@@ -115,7 +115,7 @@
 
 <dx-tabs>
 ::: 通过控制台降低/退还数据备份点配额
-在满足使用限制时，您可通过以下方式降低/退还数据备份点配额：
+在满足 [使用限制](https://cloud.tencent.com/document/product/362/73592#restrictions) 时，您可通过以下方式降低/退还数据备份点配额：
 
 1. 登录 [云硬盘控制台](https://console.cloud.tencent.com/cvm/cbs)，并在页面上方选择云硬盘所在地域。
 2. 在列表中找到需要调整数据备份点配额的云硬盘，选择其所在行右侧的**更多** > **调整数据备份点配额**。如下图所示：
