--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/发布日志.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/发布日志.md
@@ -4,8 +4,8 @@
 
 ### SDK Version 0.1.9 @ 2022/04/28
 - 新增内置贴纸
-- 修复移动web切后台黑屏问题
+- 修复移动 Web 切后台黑屏问题
 
 ### SDK Version 0.1.12 @ 2022/05/11
-- SDK性能优化
-- 新增fps属性，支持设置渲染帧率
+- SDK 性能优化
+- 新增 FPS 属性，支持设置渲染帧率
