--- a/product/计算与网络/腾讯云自动化助手/操作指南/查看命令执行状态.md
+++ b/product/计算与网络/腾讯云自动化助手/操作指南/查看命令执行状态.md
@@ -20,7 +20,7 @@ vim /usr/local/qcloud/tat_agent/log/tat_agent.log
 :::
 </dx-tabs>
 
-对比 [命令执行状态](https://cloud.tencent.com/document/product/1340/50752)，获取当前的命令执行状态信息。
+对比 [命令执行状态](https://cloud.tencent.com/document/product/1340/50752#Status)，获取当前的命令执行状态信息。
 
 
 
