--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/概述.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/概述.md
@@ -35,7 +35,7 @@
 
 
 ## 使用限制[](id:restrictions)
-- 目前仅支持非 SATA 的数据盘设置数据备份点配额。
+- 目前仅支持数据盘设置数据备份点配额。
 - 目前每块云硬盘最大仅支持**1个**数据备份点配额，即每块云硬盘最多可保留1个数据备份点。
 - 数据备份点不同于快照，不会额外按照快照计费方式进行计费。
 - 数据备份点当前仅支持由腾讯云自动为云硬盘创建，不支持用户手动创建。
