--- a/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/调整数据备份点配额.md
+++ b/product/计算与网络/云硬盘/操作指南/云硬盘数据备份点/调整数据备份点配额.md
@@ -7,6 +7,7 @@
 <dx-alert infotype="notice" title="">
 - 目前数据备份点配额最大支持1个。
 - 数据备份点配额计费仅与云硬盘大小相关，与其他因素均无关。
+- 降低/退还数据备份点配额至0个时，您的已有数据盘备份点将会同步删除。如需保留重要该备份点数据，可将其转化为快照，详情请参见 [将数据备份点转为快照](https://cloud.tencent.com/document/product/362/73669)。
 </dx-alert>
 
 
