--- a/product/安全服务/BGP 高防 IP/高防IP新版/快速入门/网站业务接入.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/快速入门/网站业务接入.md
@@ -55,4 +55,4 @@
 
 ### 修改 DNS 解析
 如需修改 DNS 解析，请参见 [配置智能调度](https://cloud.tencent.com/document/product/1014/44116#.E4.BF.AE.E6.94.B9-dns-.E8.A7.A3.E6.9E.90) 文档的修改 DNS 解析进行操作。
->!高防资源提供 CNAME，并提供对应的高防 IP，此 IP 地址为当下 CNAME 解析的目的 IP 地址；此 IP 地址将不定期更换，请不要过度依赖此功能。
+>!高防资源将提供 CNAME，请将 DNS 解析地址修改为该 CNAME 高防资源。CNAME 解析目的高防 IP 将不定期更换。（不涉及三网资源）。
