--- a/product/安全服务/边缘安全加速平台/操作指南/智能加速.md
+++ b/product/安全服务/边缘安全加速平台/操作指南/智能加速.md
@@ -10,7 +10,7 @@
 对于动态内容的使用场景，您可参考上述场景。同时，您的静态内容仍将通过缓存在边缘服务器中的数据提供服务。此外，当边缘缓存内容出现过期情况时，它将通过智能加速进行快速更新。
 
 ## 操作步骤
-### 为站点开启或关闭智能加速 
+### 站点使用智能加速 
 
 > ?
 >
@@ -20,7 +20,7 @@
 2. 在智能加速页面，选择所需站点，单击智能加速的“开关”，开启或关闭智能加速功能。
 ![](https://qcloudimg.tencent-cloud.cn/raw/bb30c3beaf81355c15eb06b5b1ff3cb7.png)
 
-### 为具体子域名开启或关闭智能加速
+### 子域名使用智能加速
 若您想为具体子域名开启或关闭智能加速，您可以在 [规则引擎](https://console.cloud.tencent.com/edgeone/rules) 页面，为对应的子域名添加规则，开启或关闭智能加速。具体步骤如下：
 
 1. 在 [规则引擎页面](https://console.cloud.tencent.com/edgeone/rules)，选择所需站点，单击![](https://qcloudimg.tencent-cloud.cn/raw/0f0a8aa7913c1c31284b692eadbccd85.png)。
