--- a/product/安全服务/安全营销运营平台/产品简介/应用场景.md
+++ b/product/安全服务/安全营销运营平台/产品简介/应用场景.md
@@ -2,7 +2,7 @@
 助力客户快速转型和销售触达，提供轻量版电商商城搭建，实现从商城页面装修-上下架-交易-售后全链条功能。
 
 ## 积分商城运营
-助力客户轻松运营用户，免去繁琐开发，提供积分获取、兑换及活动的标准化模版，简单配置即可打造专属的积分商城。
+助力客户轻松运营用户，免去繁琐开发，提供积分获取、兑换及活动的标准化模板，简单配置即可打造专属的积分商城。
 
 ## 活动运营促活
 提供抽奖、养成等热门活动模板，助力客户日常、节假日等活动运营，吸引用户高频参与并促进活跃，提升留存和积分转化率。
