--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -15,6 +15,14 @@
 <td> 2022-05-11</td>
 <td> <a href="https://cloud.tencent.com/document/product/1014/73661"> DDoS 高防 IP（境外企业版） 产品下架公告</a>
 </td>
+</tr>
+<tr>
+<td>DDoS 高防 IP 增加 cname 容灾公告</td>
+<td>DDoS 高防 IP 增加具有容灾能力的 CNAME，建议调整源站 DNS 解析至该 CNAME。</td>
+<td> 2022-05-11</td>
+<td> <a href="https://cloud.tencent.com/document/product/1014/73681"> DDoS 高防 IP 增加 cname 容灾公告</a>
+</td>
+</tr>
 </tbody></table>
 
 
