--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -17,10 +17,10 @@
 </td>
 </tr>
 <tr>
-<td>DDoS 高防 IP 增加 cname 容灾公告</td>
+<td>DDoS 高防 IP 增加 CNAME 容灾公告</td>
 <td>DDoS 高防 IP 增加具有容灾能力的 CNAME，建议调整源站 DNS 解析至该 CNAME。</td>
 <td> 2022-05-11</td>
-<td> <a href="https://cloud.tencent.com/document/product/1014/73681"> DDoS 高防 IP 增加 cname 容灾公告</a>
+<td> <a href="https://cloud.tencent.com/document/product/1014/73681"> DDoS 高防 IP 增加 CNAME 容灾公告</a>
 </td>
 </tr>
 </tbody></table>
