feat: 更改扫描工具文档，下线资源创建文档

--- a/product/监控与管理/迁移服务平台/迁移工具/资源扫描工具.md
+++ b/product/监控与管理/迁移服务平台/迁移工具/资源扫描工具.md
@@ -12,9 +12,13 @@
  - 扫描源：目前仅支持阿里云。
  - SecretId：填写对应云服务商的 SecretId。
  - SecretKey：填写对应云服务商的 SecretKey。
- - Regions：单击**获取可用region列表**后，选择需要扫描的 region。
-![](https://main.qcloudimg.com/raw/4534fd99652341c28892efe0804ae9ba.jpg)
-3. 单击**下一步**，在选择扫描项目阶段，如果准备将扫描结果用于资源创建，需要选择所有的资源，以便保持不同资源间的关联关系（例如：如果只选择了服务器，那么创建服务器依赖的网络、安全组等信息缺失会造成创建失败）
-所有选项无误后单击**提交**，扫描任务将自动在后台运行。
-![](https://main.qcloudimg.com/raw/fac9c404690c6783b3b803d08674566b.jpg)
-4. 当任务执行完成后，单击任务 ID 进入任务详情，即可查看资源扫描结果。
+ - Regions：单击**选择要扫描的Region**后，选择需要扫描的 region。
+ - Products：单击**选择要扫描的云产品**后，选择需要扫描的产品。
+
+![](https://qcloudimg.tencent-cloud.cn/raw/557411e399d44d136f97214e06cc9abe.png)
+
+2. 单击**确定**，所有选项无误后单击**提交**，扫描任务将自动在后台运行。
+
+3. 当任务执行完成后，单击任务 ID 进入任务详情，即可查看资源扫描结果（任务未完成将不可点击）。
+
+  ![](https://qcloudimg.tencent-cloud.cn/raw/f03bcd8d3b6fa52523e281d676276963.png)
