--- a/product/监控与管理/迁移服务平台/迁移工具/资源扫描工具.md
+++ b/product/监控与管理/迁移服务平台/迁移工具/资源扫描工具.md
@@ -11,8 +11,8 @@
  - 扫描源：目前仅支持阿里云。
  - SecretId：填写对应云服务商的 SecretId。
  - SecretKey：填写对应云服务商的 SecretKey。
- - Regions：单击**选择要扫描的Region**后，选择需要扫描的 region。
+ - Regions：单击**选择要扫描的 Region** 后，选择需要扫描的 region。
  - Products：单击**选择要扫描的云产品**后，选择需要扫描的产品。
 3. 单击**确定**，所有选项无误后单击**提交**，扫描任务将自动在后台运行。
-4. 当任务执行完成后，单击任务 ID 进入任务详情，即可查看资源扫描结果（任务未完成将不可点击）。
+4. 当任务执行完成后，单击任务 ID 进入任务详情，即可查看资源扫描结果（任务未完成将不可操作）。
 ![](https://qcloudimg.tencent-cloud.cn/raw/f03bcd8d3b6fa52523e281d676276963.png)
