--- a/product/移动与通信/云开发低代码平台/服务协议/腾讯云微搭应用市场平台协议.md
+++ b/product/移动与通信/云开发低代码平台/服务协议/腾讯云微搭应用市场平台协议.md
@@ -60,7 +60,7 @@
 
 ## 5. 用户个人信息保护
 
-5.1 您在应用市场购买产品时，需先注册腾讯云账户并完成实名认证。在此过程中，您需要向腾讯云提交真实、合法、有效的信息，包括但不限于姓名、电子邮箱、联系电话、银行账户信息等。腾讯云将严格遵守相关法律法规及《腾讯云隐私声明》的要求保护您的个人信息。
+5.1 您在应用市场购买产品时，需先注册腾讯云账户并完成实名认证。在此过程中，您需要向腾讯云提交真实、合法、有效的信息，包括但不限于姓名、电子邮箱、联系电话、银行账户信息等。腾讯云将严格遵守相关法律法规及[《腾讯云隐私声明》](https://cloud.tencent.com/document/product/301/11470)的要求保护您的个人信息。
 
 5.2 在使用服务商提供的产品过程中，服务商可能需要单独收集和使用您的相关个人信息。对于此类信息，您有权利要求服务商遵循相关法律法规的要求及隐私保护的原则。购买、使用具体产品之前，请审慎了解产品是否符合隐私保护原则，如果您对具体产品有异议的，则请勿以任何方式购买或使用。在购买、使用产品后，若产生有关个人信息保护方面的纠纷，您应当与服务商协商解决。
 
