--- a/product/移动与通信/云开发低代码平台/服务协议/腾讯云微搭应用市场平台协议.md
+++ b/product/移动与通信/云开发低代码平台/服务协议/腾讯云微搭应用市场平台协议.md
@@ -15,7 +15,7 @@
 
 2.2 微搭应用市场服务商：指接入并通过微搭应用市场，向用户销售产品或者提供服务的个人、法定代表人或其他组织，简称“服务商”。
 
-2.3 产品：指微搭应用市场服务商向用户提供的各种产品和服务，包括但不限于微搭模版应用、云开发应用等，统称为“产品”。
+2.3 产品：指微搭应用市场服务商向用户提供的各种产品和服务，包括但不限于微搭模板应用、云开发应用等，统称为“产品”。
 
 2.4 微搭应用市场用户：指通过微搭应用市场使用服务商提供的产品的个人、法定代表人或其他组织，简称为“用户”或“您”。
 
