--- a/product/视频服务/点播/开发者指南/事件通知/视频删除完成.md
+++ b/product/视频服务/点播/开发者指南/事件通知/视频删除完成.md
@@ -18,9 +18,18 @@ FileDeleted
     "EventType":"FileDeleted",
     "FileDeleteEvent":{
         "FileIdSet":[
-            "24961954183381008",
-            "24961954183381009",
-            "24961954183381010"
+            "24961954183381008"
+        ],
+        "FileDeleteResultInfo":[
+            {
+                "FileId":"24961954183381008",
+                "DeleteParts":[
+                    {
+                        "Type":"TranscodeFiles",
+                        "Definition":0
+                    }
+                ]
+            }
         ]
     }
 }
@@ -32,22 +41,31 @@ FileDeleted
 
 ```json
 {
-	"Response": {
-		"EventSet": [
-			{
-				"EventHandle": "EventHandle.N",
-				"EventType": "FileDeleted",
-				"FileDeleteEvent": {
-                    "FileIdSet": [
-                        "24961954183381008",
-                        "24961954183381009",
-                        "24961954183381010"
+    "Response":{
+        "EventSet":[
+            {
+                "EventHandle":"EventHandle.N",
+                "EventType":"FileDeleted",
+                "FileDeleteEvent":{
+                    "FileIdSet":[
+                        "24961954183381008"
+                    ],
+                    "FileDeleteResultInfo":[
+                        {
+                            "FileId":"24961954183381008",
+                            "DeleteParts":[
+                                {
+                                    "Type":"TranscodeFiles",
+                                    "Definition":0
+                                }
+                            ]
+                        }
                     ]
                 }
-			}
-		],
-		"RequestId": "335bdaa3-db0e-46ce-9946-51941d9cb0f5"
-	}
+            }
+        ],
+        "RequestId":"335bdaa3-db0e-46ce-9946-51941d9cb0f5"
+    }
 }
 ```
 
