--- a/product/计算与网络/轻量应用服务器/产品动态/镜像更新记录.md
+++ b/product/计算与网络/轻量应用服务器/产品动态/镜像更新记录.md
@@ -7,11 +7,10 @@
     <tbody><tr><th style="width: 40%;">镜像类型</th><th style="width:60%;">更新内容</th></tr>
 		<tr>
 		<td>应用镜像</td>
-		<td>新增 Matomo 4.9.1 镜像。</td>
-		</tr>
-  <tr>
-		<td>应用镜像</td>
-		<td>下线 Discuz! Q 镜像。</td>
+		<td><ul class="params">
+		<li>新增 Matomo 4.9.1 镜像。</li>
+		<li>下线 Discuz! Q 镜像。</li>
+		</ul></td>
 		</tr>
 </tbody></table>
 
