--- a/product/视频服务/点播/开发者指南/事件通知/视频删除完成.md
+++ b/product/视频服务/点播/开发者指南/事件通知/视频删除完成.md
@@ -28,7 +28,7 @@ FileDeleted
 
 
 ### 可靠回调
-如果选择可靠回调模式，调用 [拉取事件通知](/document/product/266/33433) API 会接收到如下形式的 HTTP 应答（省略了值为 null 的字段）。
+如果选择可靠回调模式，调用 [拉取事件通知](https://cloud.tencent.com/document/product/266/33433) API 会接收到如下形式的 HTTP 应答（省略了值为 null 的字段）。
 
 ```json
 {
