--- a/product/安全服务/主机安全/操作指南/资产指纹.md
+++ b/product/安全服务/主机安全/操作指南/资产指纹.md
@@ -18,7 +18,7 @@
 资产概览数据每隔8小时自动同步一次，支持手动同步。
 </dx-alert>
  
-## 操作指南
+## 操作步骤
 1. 登录 [主机安全控制台](https://console.cloud.tencent.com/cwp)，在左侧导航栏，选择**资产管理** > **资产指纹**。
 2. 在资产指纹页面，展示了资产指纹分类列表，包括各资产指纹项及其对应服务器数量。在左侧资产指纹分类列表中选中一项后，右侧将展示该指纹详情，支持对指纹数据的查询和导出。
 >?各资产指纹搜索功能均支持模糊搜索。
