--- a/product/安全服务/网站管家/购买指南/计费概述.md
+++ b/product/安全服务/网站管家/购买指南/计费概述.md
@@ -207,7 +207,7 @@ Web 应用防火墙采取**基础套餐+套餐扩展或套餐增值能力组合*
 <td>-</td>
 <td>支持</td>
 <td>支持（可自定义）</td>
-<td>支持（可自定义）<</td>
+<td>支持（可自定义）</td>
 </tr>
 <tr>
  <td>一对一售前支持服务</td>
