--- a/product/大数据与AI/万象优图2.0/SDK 文档/PHP SDK/任务接口/视频标签任务接口.md
+++ b/product/大数据与AI/万象优图2.0/SDK 文档/PHP SDK/任务接口/视频标签任务接口.md
@@ -1,6 +1,6 @@
 ## 简介
 
-本文档提供关于提交视频标签任务的 API 概览和 SDK 示例代码。
+本文档提供关于视频标签任务接口的 API 概览和 SDK 示例代码。
 
 | API                                                          | 操作描述         |
 | ------------------------------------------------------------ | ---------------- |
