--- a/product/安全服务/网站管家/购买指南/计费概述.md
+++ b/product/安全服务/网站管家/购买指南/计费概述.md
@@ -1,4 +1,4 @@
-当前 Web 应用防火墙提供两种产品形态，**SaaS 型 WAF 和负载均衡型 WAF，多个不同的套餐类型**，详情请参见 [基础套餐价格说明](#base)，您可以根据自身的业务需求选择购买不同形态和不同套餐类型的 Web 应用防火墙产品。
+当前 Web 应用防火墙提供两种产品形态，**SaaS 型 WAF 和负载均衡型 WAF，并提供多个不同的套餐类型**，详情请参见 [基础套餐价格说明](#base)，您可以根据自身的业务需求选择购买不同形态和不同套餐类型的 Web 应用防火墙产品。
 
 SaaS 型 WAF 和负载均衡型 WAF 支持地区说明 请参见 [支持地域](https://cloud.tencent.com/document/product/627/47525)。
 
