--- a/product/移动与通信/即时通信/9服务端 API/服务端API/单聊消息/查询单聊消息.md
+++ b/product/移动与通信/即时通信/9服务端 API/服务端API/单聊消息/查询单聊消息.md
@@ -1,7 +1,7 @@
 ## 功能说明
 - 管理员按照时间范围，以会话其中一方的角度查询单聊会话的消息记录。
 - 查询的单聊会话由请求中的 Operator_Account 和 Peer_Account 指定，以 Operator_Account 的角度查询。查询结果包含会话双方互相发送的消息，具体每条消息的发送方和接收方由每条消息里的 From_Account 和 To_Account 指定。
-- 一般情况下，同一个会话，以会话双方的角度分别查询消息记录，得到的结果是一样的。但以下四种情况会导致结果不一样（即会话里的某些消息，其中一方能查询到，另一方查询不到）：
+- 正常情况下，分别以会话双方的角度查询消息，结果是一样的。但以下四种情况会导致结果不一样（即会话里的某些消息，其中一方能查询到，另一方查询不到）：
   1.会话的其中一方清空了会话的消息记录，即调用了终端的 [clearC2CHistoryMessage()](https://im.sdk.qcloud.com/doc/zh-cn/classcom_1_1tencent_1_1imsdk_1_1v2_1_1V2TIMMessageManager.html#a29aa6e75c2238c35cc609bef0e5a46ce) 接口。
   2.会话的其中一方删除了会话，即调用了终端的 [deleteConversation()](https://im.sdk.qcloud.com/doc/zh-cn/classcom_1_1tencent_1_1imsdk_1_1v2_1_1V2TIMConversationManager.html#a7a6e38c5a7431646bd4c0c4c66279077) 接口，或者 Web /小程序/ uni-app 的 [deleteConversation](https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#deleteConversation) 接口，或者服务端的 [删除单个会话](https://cloud.tencent.com/document/product/269/62119) 的接口且指定了 ClearRamble 的值为1。
   3.会话的其中一方删除了部分消息，即调用了终端的 [deleteMessages()](https://im.sdk.qcloud.com/doc/zh-cn/classcom_1_1tencent_1_1imsdk_1_1v2_1_1V2TIMMessageManager.html#adb346fede13d493e415f6574df911e9a) 接口，或者 Web /小程序/ uni-app 的 [deleteMessage](https://web.sdk.qcloud.com/im/doc/zh-cn/SDK.html#deleteMessage) 接口。
