--- a/product/安全服务/主机安全/操作指南/主机列表.md
+++ b/product/安全服务/主机安全/操作指南/主机列表.md
@@ -31,8 +31,8 @@
  -  单击 ![](https://main.qcloudimg.com/raw/8d95063be0c6cb229a33d77aebfba182.png) 导出按钮，可对当前筛选出来的机器进行数据导出。
 ![](https://qcloudimg.tencent-cloud.cn/raw/8818d98aa8173d8f05ef8abc76080b28.png)
 
-### 主机列表
- - 支持设置标签、关联标签；
+### 列表操作
+ - 支持设置标签、关联标签。
  - 支持重装/卸载主机安全客户端、授权管理，单击 **授权管理** 将跳转至授权管理页，进行版本授权换绑、解绑等操作。
   ![](https://qcloudimg.tencent-cloud.cn/raw/3f752cf61dc4390a8dc2379334cf11b8.png)
  - 单击入侵检测、漏洞风险、基线风险、网络风险的**数值**可跳转查看风险详情。
